--- a/content0.html
+++ b/content0.html
@@ -1,3 +1,53 @@
+<a id="ayala"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Ayala Cove (25km)</h3>
+  </li>
+  <li class="date">
+    April 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/ayala/IMG_2364.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ayala)">
+      <img width="160" height="120" src="thumbs/ayala/IMG_2364.jpg" alt="IMG_2364.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/ayala/IMG_2378.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ayala)">
+      <img width="160" height="120" src="thumbs/ayala/IMG_2378.jpg" alt="IMG_2378.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/ayala/IMG_2417.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ayala)">
+      <img width="160" height="120" src="thumbs/ayala/IMG_2417.jpg" alt="IMG_2417.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/ayala/IMG_2430.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ayala)">
+      <img width="160" height="120" src="thumbs/ayala/IMG_2430.jpg" alt="IMG_2430.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/ayala/IMG_2436.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ayala)">
+      <img width="160" height="120" src="thumbs/ayala/IMG_2436.jpg" alt="IMG_2436.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="owens"></a>
 <ul class="titlebar">
   <li class="title">
@@ -15,63 +65,90 @@
     <a class="highslide" href="hq/owens/IMG_2296.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="160" height="120" src="thumbs/owens/IMG_2296.jpg" alt="IMG_2296.jpg" />
+      <img class="lazy galleries/owens" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/IMG_2296.jpg" alt="IMG_2296.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/owens/IMG_2296.jpg" alt="IMG_2296.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/owens/R0010869.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="330" height="120" src="thumbs/owens/R0010869.jpg" alt="R0010869.jpg" />
+      <img class="lazy galleries/owens" width="330" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0010869.jpg" alt="R0010869.jpg" />
+      <noscript>
+        <img width="330" height="120" src="thumbs/owens/R0010869.jpg" alt="R0010869.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/owens/R0010918.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="188" height="120" src="thumbs/owens/R0010918.jpg" alt="R0010918.jpg" />
+      <img class="lazy galleries/owens" width="188" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0010918.jpg" alt="R0010918.jpg" />
+      <noscript>
+        <img width="188" height="120" src="thumbs/owens/R0010918.jpg" alt="R0010918.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/owens/R0010930.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="181" height="120" src="thumbs/owens/R0010930.jpg" alt="R0010930.jpg" />
+      <img class="lazy galleries/owens" width="181" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0010930.jpg" alt="R0010930.jpg" />
+      <noscript>
+        <img width="181" height="120" src="thumbs/owens/R0010930.jpg" alt="R0010930.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/owens/R0010958.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="174" height="120" src="thumbs/owens/R0010958.jpg" alt="R0010958.jpg" />
+      <img class="lazy galleries/owens" width="174" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0010958.jpg" alt="R0010958.jpg" />
+      <noscript>
+        <img width="174" height="120" src="thumbs/owens/R0010958.jpg" alt="R0010958.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot0">
     <a class="highslide" href="hq/owens/R0010967.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="181" height="120" src="thumbs/owens/R0010967.jpg" alt="R0010967.jpg" />
+      <img class="lazy galleries/owens" width="181" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0010967.jpg" alt="R0010967.jpg" />
+      <noscript>
+        <img width="181" height="120" src="thumbs/owens/R0010967.jpg" alt="R0010967.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot1">
     <a class="highslide" href="hq/owens/R0010976.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="181" height="120" src="thumbs/owens/R0010976.jpg" alt="R0010976.jpg" />
+      <img class="lazy galleries/owens" width="181" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0010976.jpg" alt="R0010976.jpg" />
+      <noscript>
+        <img width="181" height="120" src="thumbs/owens/R0010976.jpg" alt="R0010976.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/owens/R0011019.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="181" height="120" src="thumbs/owens/R0011019.jpg" alt="R0011019.jpg" />
+      <img class="lazy galleries/owens" width="181" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0011019.jpg" alt="R0011019.jpg" />
+      <noscript>
+        <img width="181" height="120" src="thumbs/owens/R0011019.jpg" alt="R0011019.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/owens/R0011031.jpg"
       title=""
       onclick="return hs.expand(this, config_owens)">
-      <img width="72" height="120" src="thumbs/owens/R0011031.jpg" alt="R0011031.jpg" />
+      <img class="lazy galleries/owens" width="72" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/owens/R0011031.jpg" alt="R0011031.jpg" />
+      <noscript>
+        <img width="72" height="120" src="thumbs/owens/R0011031.jpg" alt="R0011031.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -550,111 +627,6 @@
       <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2037.jpg" alt="IMG_2037.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/ptreyes/IMG_2037.jpg" alt="IMG_2037.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Shuteye"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Shuteye Ridge</h3>
-  </li>
-  <li class="date">
-    August 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/shuteye2/P8107374.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107374.jpg" alt="P8107374.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye2/P8107374.jpg" alt="P8107374.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/shuteye2/P8107409.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107409.jpg" alt="P8107409.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye2/P8107409.jpg" alt="P8107409.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/shuteye2/P8107463.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107463.jpg" alt="P8107463.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye2/P8107463.jpg" alt="P8107463.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/shuteye2/P8107511.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107511.jpg" alt="P8107511.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye2/P8107511.jpg" alt="P8107511.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/shuteye2/P8107552.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107552.jpg" alt="P8107552.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye2/P8107552.jpg" alt="P8107552.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/shuteye2/P8117587.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8117587.jpg" alt="P8117587.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/shuteye2/P8117587.jpg" alt="P8117587.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/shuteye2/P8117622.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8117622.jpg" alt="P8117622.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/shuteye2/P8117622.jpg" alt="P8117622.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/shuteye2/Y999_panorama.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="654" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/Y999_panorama.jpg" alt="Y999_panorama.jpg" />
-      <noscript>
-        <img width="654" height="120" src="thumbs/shuteye2/Y999_panorama.jpg" alt="Y999_panorama.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/shuteye2/Z999.jpg"
-      title=""
-      onclick="return hs.expand(this, config_shuteye2)">
-      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
       </noscript>
     </a>
   </div>
