--- a/content1.html
+++ b/content1.html
@@ -1,3 +1,108 @@
+<a id="Shuteye"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Shuteye Ridge</h3>
+  </li>
+  <li class="date">
+    August 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shuteye2/P8107374.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107374.jpg" alt="P8107374.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107374.jpg" alt="P8107374.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/shuteye2/P8107409.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107409.jpg" alt="P8107409.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107409.jpg" alt="P8107409.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/shuteye2/P8107463.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107463.jpg" alt="P8107463.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107463.jpg" alt="P8107463.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/shuteye2/P8107511.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107511.jpg" alt="P8107511.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107511.jpg" alt="P8107511.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/shuteye2/P8107552.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107552.jpg" alt="P8107552.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107552.jpg" alt="P8107552.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/shuteye2/P8117587.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8117587.jpg" alt="P8117587.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye2/P8117587.jpg" alt="P8117587.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shuteye2/P8117622.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8117622.jpg" alt="P8117622.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye2/P8117622.jpg" alt="P8117622.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/shuteye2/Y999_panorama.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="654" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/Y999_panorama.jpg" alt="Y999_panorama.jpg" />
+      <noscript>
+        <img width="654" height="120" src="thumbs/shuteye2/Y999_panorama.jpg" alt="Y999_panorama.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/shuteye2/Z999.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye2)">
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="ggsemi"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -930,121 +1035,6 @@
       <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Marion2"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Combe à Marion</h3>
-  </li>
-  <li class="date">
-    December 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/marion2/IMG_1132.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1132.jpg" alt="IMG_1132.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion2/IMG_1132.jpg" alt="IMG_1132.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/marion2/IMG_1136.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1136.jpg" alt="IMG_1136.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion2/IMG_1136.jpg" alt="IMG_1136.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/marion2/IMG_1144.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1144.jpg" alt="IMG_1144.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion2/IMG_1144.jpg" alt="IMG_1144.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/marion2/IMG_1150.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1150.jpg" alt="IMG_1150.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion2/IMG_1150.jpg" alt="IMG_1150.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/marion2/IMG_1159.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1159.jpg" alt="IMG_1159.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion2/IMG_1159.jpg" alt="IMG_1159.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/marion2/IMG_1164.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1164.jpg" alt="IMG_1164.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion2/IMG_1164.jpg" alt="IMG_1164.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/marion2/IMG_1166.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1166.jpg" alt="IMG_1166.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion2/IMG_1166.jpg" alt="IMG_1166.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/marion2/IMG_1169.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1169.jpg" alt="IMG_1169.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion2/IMG_1169.jpg" alt="IMG_1169.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/marion2/IMG_1170.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1170.jpg" alt="IMG_1170.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion2/IMG_1170.jpg" alt="IMG_1170.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/marion2/IMG_9999.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion2)">
-      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
       </noscript>
     </a>
   </div>
