--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,118 @@
+<a id="Marion2"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Combe à Marion</h3>
+  </li>
+  <li class="date">
+    December 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/marion2/IMG_1132.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1132.jpg" alt="IMG_1132.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1132.jpg" alt="IMG_1132.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/marion2/IMG_1136.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1136.jpg" alt="IMG_1136.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1136.jpg" alt="IMG_1136.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/marion2/IMG_1144.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1144.jpg" alt="IMG_1144.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1144.jpg" alt="IMG_1144.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/marion2/IMG_1150.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1150.jpg" alt="IMG_1150.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1150.jpg" alt="IMG_1150.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/marion2/IMG_1159.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1159.jpg" alt="IMG_1159.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1159.jpg" alt="IMG_1159.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/marion2/IMG_1164.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1164.jpg" alt="IMG_1164.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1164.jpg" alt="IMG_1164.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/marion2/IMG_1166.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1166.jpg" alt="IMG_1166.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1166.jpg" alt="IMG_1166.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/marion2/IMG_1169.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1169.jpg" alt="IMG_1169.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1169.jpg" alt="IMG_1169.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/marion2/IMG_1170.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1170.jpg" alt="IMG_1170.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1170.jpg" alt="IMG_1170.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/marion2/IMG_9999.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Sierra"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -859,141 +974,6 @@
       <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0655.jpg" alt="IMG_0655.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/russell/IMG_0655.jpg" alt="IMG_0655.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="EastButtress"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>El Cap's East Buttress</h3>
-  </li>
-  <li class="date">
-    April 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/eastbuttress/00.jpg"
-      title="The East Buttress is the easiest route on El Cap. It is exactly half the height of the nose."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/00.jpg" alt="00.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/00.jpg" alt="00.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/eastbuttress/01.jpg"
-      title="The route starts with a classic Yosemite 5.9 chimney. A rough wake-up."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/01.jpg" alt="01.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/eastbuttress/01.jpg" alt="01.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/eastbuttress/02.jpg"
-      title="The chimney ends with some wild stemming!"
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/02.jpg" alt="02.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/02.jpg" alt="02.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/eastbuttress/04.jpg"
-      title="The route continues straight up on the arete. Exposed, a bit runout but easy, this fourth pitch is one of the best."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/04.jpg" alt="04.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/eastbuttress/04.jpg" alt="04.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/eastbuttress/05.jpg"
-      title="The morning sun on the three cathedrals."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/05.jpg" alt="05.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/05.jpg" alt="05.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/eastbuttress/07.jpg"
-      title="Davide relaxing after clearing all the difficulties of the day and eating well-deserved lunch."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/07.jpg" alt="07.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/07.jpg" alt="07.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/eastbuttress/08.jpg"
-      title="The wind blew burst of water from the nearby waterfall on us. With the sun hitting the rock hard, the route stayed dry."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/08.jpg" alt="08.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/08.jpg" alt="08.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/eastbuttress/10.jpg"
-      title="The 11th and best pitch going up a water poslished wall with rounds knobs. Great exposure!"
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/eastbuttress/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/eastbuttress/95.jpg"
-      title="Davide and I, tired but happy on the summit."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/95.jpg" alt="95.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/95.jpg" alt="95.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/eastbuttress/96.jpg"
-      title="My hands, after 13 pitches of climbing."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/96.jpg" alt="96.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/96.jpg" alt="96.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/eastbuttress/97.jpg"
-      title=""
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/97.jpg" alt="97.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/97.jpg" alt="97.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/eastbuttress/98.jpg"
-      title="We descended via the East ledges. The &quot;wild dikes&quot; mark the first of three rappels."
-      onclick="return hs.expand(this, config_eastbuttress)">
-      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
       </noscript>
     </a>
   </div>
