--- a/content3.html
+++ b/content3.html
@@ -1,3 +1,138 @@
+<a id="EastButtress"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>El Cap's East Buttress</h3>
+  </li>
+  <li class="date">
+    April 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/eastbuttress/00.jpg"
+      title="The East Buttress is the easiest route on El Cap. It is exactly half the height of the nose."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/00.jpg" alt="00.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/00.jpg" alt="00.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/eastbuttress/01.jpg"
+      title="The route starts with a classic Yosemite 5.9 chimney. A rough wake-up."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/01.jpg" alt="01.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/eastbuttress/01.jpg" alt="01.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/eastbuttress/02.jpg"
+      title="The chimney ends with some wild stemming!"
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/02.jpg" alt="02.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/02.jpg" alt="02.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/eastbuttress/04.jpg"
+      title="The route continues straight up on the arete. Exposed, a bit runout but easy, this fourth pitch is one of the best."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/04.jpg" alt="04.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/eastbuttress/04.jpg" alt="04.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/eastbuttress/05.jpg"
+      title="The morning sun on the three cathedrals."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/05.jpg" alt="05.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/05.jpg" alt="05.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/eastbuttress/07.jpg"
+      title="Davide relaxing after clearing all the difficulties of the day and eating well-deserved lunch."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/07.jpg" alt="07.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/07.jpg" alt="07.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/eastbuttress/08.jpg"
+      title="The wind blew burst of water from the nearby waterfall on us. With the sun hitting the rock hard, the route stayed dry."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/08.jpg" alt="08.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/08.jpg" alt="08.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/eastbuttress/10.jpg"
+      title="The 11th and best pitch going up a water poslished wall with rounds knobs. Great exposure!"
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/10.jpg" alt="10.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/eastbuttress/10.jpg" alt="10.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/eastbuttress/95.jpg"
+      title="Davide and I, tired but happy on the summit."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/95.jpg" alt="95.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/95.jpg" alt="95.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/eastbuttress/96.jpg"
+      title="My hands, after 13 pitches of climbing."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/96.jpg" alt="96.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/96.jpg" alt="96.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/eastbuttress/97.jpg"
+      title=""
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/97.jpg" alt="97.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/97.jpg" alt="97.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/eastbuttress/98.jpg"
+      title="We descended via the East ledges. The &quot;wild dikes&quot; mark the first of three rappels."
+      onclick="return hs.expand(this, config_eastbuttress)">
+      <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Pinnacles2"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -711,171 +846,6 @@
       <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="CathedralPeak"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Cathedral Peak</h3>
-  </li>
-  <li class="date">
-    September 2012
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/cathedral_peak/01.jpg"
-      title="We missed a turn during the approach and took the long way around Cathedral Peak."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/01.jpg" alt="01.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/cathedral_peak/01.jpg" alt="01.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/cathedral_peak/02.jpg"
-      title="Sun rising on the Eichorn Pinnacle (front, 3255m) and Cathedral Peak (back, 3326m)."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/02.jpg" alt="02.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/02.jpg" alt="02.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/cathedral_peak/03.jpg"
-      title="The south side of Cathedral Peak. The little tooth on the summit is called Panic Pillar."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/03.jpg" alt="03.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/03.jpg" alt="03.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/cathedral_peak/04.jpg"
-      title="Benji is geared up and ready to go. The South East face can be climbed pretty much everywhere."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/04.jpg" alt="04.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/04.jpg" alt="04.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/cathedral_peak/05.jpg"
-      title="Finishing the first pictch. All belays were on comfortable ledges."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/05.jpg" alt="05.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/05.jpg" alt="05.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/cathedral_peak/06.jpg"
-      title="Benji is taking it easy on his lead for the second pitch."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/06.jpg" alt="06.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/06.jpg" alt="06.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/cathedral_peak/07.jpg"
-      title="Really fun hand-crack for the last 5 meters to the second belay."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/07.jpg" alt="07.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/07.jpg" alt="07.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/cathedral_peak/09.jpg"
-      title="View of Cockscomb Peak behind Budd Lake."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/09.jpg" alt="09.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/09.jpg" alt="09.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/cathedral_peak/10.jpg"
-      title="Unicorn Peak viewed from the top of the third pitch."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/cathedral_peak/11.jpg"
-      title=""
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/11.jpg" alt="11.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/11.jpg" alt="11.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/cathedral_peak/12.jpg"
-      title="Top of pitch 4. We made our own route variation to over take the party in front of us and avoid a painful-looking chimney."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/12.jpg" alt="12.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/12.jpg" alt="12.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/cathedral_peak/13.jpg"
-      title="The Upper Cathedral Lake, still from the top of pitch 4 looking to the other direction."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/13.jpg" alt="13.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/cathedral_peak/13.jpg" alt="13.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/cathedral_peak/15.jpg"
-      title="The summit, with the Panic Pillar and both Cathedral Lakes."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/15.jpg" alt="15.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/15.jpg" alt="15.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/cathedral_peak/16.jpg"
-      title="We attempted the wrong side (shown here) of the Eichorn Pinnacle, and got stuck half-way up a wide crack. Without big cams, we bailed but got our gear back."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/16.jpg" alt="16.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/16.jpg" alt="16.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/cathedral_peak/18.jpg"
-      title="The easiest route up the Eichorn goes diagonally to the right, following a line of weaknesses in the rock. We did not get to try it as we got caught up helping the rescue of a party climbing on the arete."
-      onclick="return hs.expand(this, config_cathedral_peak)">
-      <img class="lazy galleries/cathedral_peak" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/cathedral_peak/18.jpg" alt="18.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/cathedral_peak/18.jpg" alt="18.jpg" />
       </noscript>
     </a>
   </div>
